# aiagent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  runner.py
app/executor/: __init__.py  action_executor.py  keyboard_executor.py  manual_smoke.py  mouse_executor.py
app/guard/: __init__.py  action_guard.py  safety_rules.py
app/models/: __init__.py  action.py
app/observer/: window_info.py
app/storage/: __init__.py  logger.py  screenshot_store.py
tests/: test_action_models.py  test_guard_and_executor.py
